// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoutePage renders the empty state 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    loading...
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`RoutePage renders with a selected vehicle 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  />
  <div
    className="m-vehicle-properties-panel"
    id="m-vehicle-properties-panel"
  >
    <div
      className="m-vehicle-properties-panel__header"
    >
      <div
        className="m-vehicle-properties-panel__label on-time"
      >
        <svg
          style={
            Object {
              "height": 60,
              "width": 64,
            }
          }
          viewBox="-32 -16 64 60"
        >
          <g
            className="m-vehicle-icon m-vehicle-icon--large"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={24}
              rx={12}
              ry={12}
              width={64}
              x={-32}
              y={19}
            />
            <text
              className="m-vehicle-icon__label"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={31}
            >
              v1
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              transform="scale(1) rotate(0) translate(-24,-22)"
            />
          </g>
        </svg>
      </div>
      <div
        className="m-vehicle-properties-panel__variant"
      >
        <div
          className="m-vehicle-properties-panel__inbound-outbound"
        >
          Inbound
        </div>
        <div
          className="m-vehicle-properties-panel__variant-name"
        >
          28_
        </div>
        <div
          className="m-vehicle-properties-panel__schedule-adherence on-time"
        >
          <div
            className="m-vehicle-properties-panel__schedule-adherence-status-icon"
          >
            <svg
              height="10"
              width="10"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
              />
            </svg>
          </div>
          <div
            className="m-vehicle-properties-panel__schedule-adherence-status-string"
          >
            on-time
          </div>
          <div
            className="m-vehicle-properties-panel__schedule-adherence-label"
          >
            (0 min early)
          </div>
        </div>
      </div>
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <table
      className="m-vehicle-properties-panel__vehicle-properties"
    >
      <tbody>
        <tr>
          <th
            className="m-vehicle-properties-panel__vehicle-property-label"
          >
            Run
          </th>
          <td
            className="m-vehicle-properties-panel__vehicle-property-value"
          >
            run1
          </td>
        </tr>
        <tr>
          <th
            className="m-vehicle-properties-panel__vehicle-property-label"
          >
            Vehicle
          </th>
          <td
            className="m-vehicle-properties-panel__vehicle-property-value"
          >
            v1
          </td>
        </tr>
        <tr>
          <th
            className="m-vehicle-properties-panel__vehicle-property-label"
          >
            Operator
          </th>
          <td
            className="m-vehicle-properties-panel__vehicle-property-value"
          >
            SMITH
             #
            op1
          </td>
        </tr>
      </tbody>
    </table>
    <div
      className="m-vehicle-properties-panel__location"
    >
      <div
        className="m-vehicle-properties-panel__vehicle-property-label"
      >
        Next Stop
      </div>
      <div
        className="m-vehicle-properties-panel__vehicle-property-value"
      >
        stop
      </div>
      <a
        className="m-vehicle-properties-panel__link"
        href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
      >
        Directions
      </a>
      <div
        className="m-vehicle-map"
        id="id-vehicle-map"
      />
    </div>
    <button
      className="m-vehicle-properties-panel__close"
      onClick={[Function]}
    >
      Close
    </button>
  </div>
  <div
    className="m-vehicle-properties-panel__modal-overlay"
    onClick={[Function]}
  />
</div>
`;

exports[`RoutePage renders with routes 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    >
      <li>
        <button
          className="m-route-picker__selected-routes-button"
          onClick={[Function]}
        >
          1
        </button>
      </li>
    </ul>
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  >
    <div
      className="m-route-ladder__header"
    >
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
      <div
        className="m-route-ladder__route-name"
      >
        1
      </div>
    </div>
    <div
      className="m-route-ladder__controls"
    >
      <button
        className="m-route-ladder__reverse"
        onClick={[Function]}
      >
        <span
          className="m-route-ladder__reverse-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Reverse
      </button>
    </div>
    loading...
  </div>
</div>
`;

exports[`RoutePage renders with selectedRoutes in different order than routes data 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    >
      <li>
        <button
          className="m-route-picker__selected-routes-button"
          onClick={[Function]}
        >
          28
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__selected-routes-button"
          onClick={[Function]}
        >
          1
        </button>
      </li>
    </ul>
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  >
    <div
      className="m-route-ladder__header"
    >
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
      <div
        className="m-route-ladder__route-name"
      >
        28
      </div>
    </div>
    <div
      className="m-route-ladder__controls"
    >
      <button
        className="m-route-ladder__reverse"
        onClick={[Function]}
      >
        <span
          className="m-route-ladder__reverse-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Reverse
      </button>
    </div>
    loading...
    <div
      className="m-route-ladder__header"
    >
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
      <div
        className="m-route-ladder__route-name"
      >
        1
      </div>
    </div>
    <div
      className="m-route-ladder__controls"
    >
      <button
        className="m-route-ladder__reverse"
        onClick={[Function]}
      >
        <span
          className="m-route-ladder__reverse-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Reverse
      </button>
    </div>
    loading...
  </div>
</div>
`;

exports[`RoutePage renders with timepoints 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`RoutePage renders with vehicles 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;
